--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             aria-hidden="true"></i></span>
                 </div>
             </div>
-            <div class="card" id="recent-list" style="width: 18rem;">
+            <div class="card" id="recent-list" style="width: 100%;">
                 <ul class="list-group " id="search-history">
                 </ul>
             </div>   
@@ -40,8 +40,10 @@
         </div>
 
         <!-- 5 day forcast -->
-        <div class="item4 forcast-container">
-             
+        <div class="item4">
+             <div class="row text-center forcast-container">
+
+             </div>
         </div>
     </div>
 
