readme and style

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <div class="grid-container">
 
         <!-- header -->
-        <div class="item1">Weather Dashboard</div>
+        <div class="item1">
+            <span class="navbar-text ">
+              Weather Dashboard
+            </span>
+        </div>
 
         <!-- search & recent list-->
         <div class="item2">
